not severe.  It only occurs when --default-font-index is specified on
the command line.  Symptoms vary according to how the compiler
arranges certain variables in memory.

Thanks to Richard Lowe <richlowe@richlowe.net> for reporting the
problem.
----------------------------------------------------------------------
Thu Sep  6 15:33:37 2001                        Michael Jennings (mej)

While I'm at it, here's a patch to fix some escape sequence handling
under vim from Paul W Brannan <pbranna@clemson.edu>.  This patch is
reported to fix problems where vim would come up with underlines.
----------------------------------------------------------------------
Sat Sep 22 09:41:26 2001                        Michael Jennings (mej)

Fixes for Solaris where ln requires a certain argument order.  This
was flagged by Kevin Doherty <kdoherty@cosanostra.net>.
----------------------------------------------------------------------
Wed Sep 26 23:19:37 2001                        Michael Jennings (mej)

Oops.  Let's get rid of that useless code. :P  Problem pointed out by
Andre Pang <ozone@algorithm.com.au>.
----------------------------------------------------------------------
Thu Oct 11 05:32:57 2001                        Michael Jennings (mej)

Jerome De Greef <jdegreef@brutele.be> contributed a configure.ac file
for those who are using autoconf 2.50 or higher.
----------------------------------------------------------------------
Sun Oct 21 06:15:13 2001                        Michael Jennings (mej)

Fixed a couple remaining bugs in 0.9.1, including that really
annoying problem people keeping whining about where Eterm won't build
without Imlib2.  It will now. :P
----------------------------------------------------------------------
Thu Oct 25 02:01:27 2001                        Michael Jennings (mej)

Argh.  This configure.in/configure.ac thing is getting really old.
----------------------------------------------------------------------