@@ -3,8 +3,8 @@
 
 Summary: Enlightened terminal emulator
 Name: Eterm
-Version: 0.9.1
-Release: 2
+Version: 0.9.2
+Release: 1
 Copyright: BSD
 Group: User Interface/X
 %if %{bzip}
