@@ -1,7 +1,7 @@
 dnl# $Id$
 
 AC_INIT(src/feature.h)
-AM_INIT_AUTOMAKE(Eterm, 0.9.1)
+AM_INIT_AUTOMAKE(Eterm, 0.9.2)
 
 dnl# Set some basic variables
 DATE="`date '+%d %B %Y'`"
