@@ -4417,3 +4417,13 @@ Thu Oct 25 02:01:27 2001                        Michael Jennings (mej)
 
 Argh.  This configure.in/configure.ac thing is getting really old.
 ----------------------------------------------------------------------
+Mon Dec  3 20:16:39 2001                        Michael Jennings (mej)
+
+Patches from Paul Brannan <pbranna@clemson.edu>, Klaus Elsbernd
+<elsbernd@dfki.uni-kl.de>, and Derrick Moser
+<d2moser@calum.csclub.uwaterloo.ca> which appeared while I was away.
+Fixes for mouse wheel reporting and reset handling (Paul), Solaris
+portability (Klaus), and XIM (Derrick).
+
+Getting ready to release 0.9.2 soonish.
+----------------------------------------------------------------------
